fixed spacing in personal, updated copy in about, added new images in personal

--- a/html/style.css
+++ b/html/style.css
@@ -706,6 +706,7 @@ main.work > img, main.work > video {
     height: 100%;
     width: 100%;
     object-fit: cover;
+    overflow: hidden;
 }
 
 .work figure {
